fixed overlapping

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -3,10 +3,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* position: sticky; */
+    position: relative;
     top: 0;
     background-color:white;
     width: 100%;
+
 }
 
 
@@ -72,6 +73,7 @@
     opacity: 1;
     pointer-events:inherit;
     width: 90px;
+    top:65px
 }
 
 
